--- a/index.html
+++ b/index.html
@@ -183,17 +183,242 @@
             </div>
             <div class="row">
               <div class="ten wide column">
-                <!-- Experience -->
+                <ul class="timeline">
+                  <li class="highlighted">
+                    <p><em>2018</em></p>
+                    <p>
+                      Amongst many fighters of the past was featured in the
+                      movie
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&q=ready+player+one"
+                        >"Ready Player One"</a
+                      >. <strong>Ryu ready always!</strong>
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>2017</em></p>
+                    <p>
+                      United with unknown until then to me
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk03LEU6OeHvVjkXrGTGKwvChEo7EyQ%3A1588460582664&ei=JvytXtL4J-nirgSd0abgAg&q=power+rangers&oq=power&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgQIABBDMgIIADoECAAQRzoECCMQJzoFCAAQgwFQgLQNWIy5DWC8wQ1oAHACeACAAXKIAZwEkgEDMS40mAEAoAEBqgEHZ3dzLXdpeg&sclient=psy-ab"
+                        >Power Rangers</a
+                      >
+                      to defea resurrected <strong>M.Bison.Damn</strong> good
+                      fighters they are, even not knowing karate ways!
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>2016</em></p>
+                    <p>
+                      In
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                      >
+                        "Street Fighter V"</a
+                      >
+                      once and for all erased <strong>M.Bison</strong> from
+                      earth and tamed my inner <strong> Ryu</strong>. Also spent
+                      some time on a side-project, mini-series
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter: Resurrection"</a
+                      >.
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>2014</em></p>
+                    <p>
+                      Filmed in a martial arts tutorial
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter: Assassin's Fist"</a
+                      >, revealing to <em>audience</em> forgotten art of
+                      <strong>Ansatsuken</strong>.
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>2012</em></p>
+                    <p>
+                      The gods of intenet concluded me in the animated movie
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&q=Wreck-It+Ralph"
+                        >"Wreck-It Ralph"</a
+                      >, but rewarded me with a good drink for it!
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>2008</em></p>
+                    <p>
+                      <strong>My evil</strong> alter ego sneaked out of control
+                      and became a boss in
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter IV"</a
+                      >.
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>2006</em></p>
+                    <p>
+                      Borrowed my famous ripped gi to <strong>Soki</strong> in
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&q=Onimusha%3A+Dawn+of+Dreams"
+                        >"Onimusha: Dawn of Dreams"</a
+                      >, gods informed me he needed that for the battle.
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>1998</em></p>
+                    <p>
+                      Defeated <strong>M. Bison</strong> in
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter Alpha 2"</a
+                      >, bastard wanted to use my heroic body for his evil
+                      intentions, but retreated with shame. Also this year I
+                      encountered <em>Marvel universe</em> in
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&q=Marvel+vs.Capcom%3A+Clash+of+Super+Heroes"
+                        >"Marvel vs. Capcom: Clash of Super Heroes"</a
+                      >
+                      fighter,loyal to my employer, <em>Capcom</em>, of course.
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>1997</em></p>
+                    Reunited with <em>Ken</em>, my friend and opponent in
+                    <a
+                      href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                      >"Street Fighter III"</a
+                    >. Men's friendship works mysteriously. Also helped with
+                    <em>Arika project</em>
+                    <a
+                      href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                      >"Street Fighter EX"</a
+                    >
+                  </li>
+                  <li>
+                    <p><em>1996</em></p>
+                    <p>
+                      Took care of villainous <strong>Akuma</strong> in
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter Alpha 2"</a
+                      >. As a freelance on
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Super Puzzle Fighter II Turbo"</a
+                      >
+                      tried myself in a new genre, puzzle games. Let the wrath
+                      of seven heavens come upon these malicious enigmas, never
+                      again!
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>1995</em></p>
+                    <p>
+                      Kept fighting in
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter Alpha 2"</a
+                      >. As a freelance on
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter Alpha: Warriors' Dreams"</a
+                      >.
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>1994</em></p>
+                    <p>
+                      Screened in a movie
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter Alpha 2"</a
+                      >. As a freelance on
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter"</a
+                      >, so that the batllesof past would not be forgotten by
+                      millenial generation.
+                    </p>
+                  </li>
+                  <li>
+                    <p><em>1991</em></p>
+                    <p>
+                      Was promoted to
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                        >"Street Fighter Alpha 2"</a
+                      >. As a freelance on
+                      <a
+                        href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                      >
+                        "Street Fighter II"</a
+                      >. Didn't stay there for long, celebrations and office
+                      dwelling is not for me!
+                    </p>
+                  </li>
+                  <li>
+                    <p><small>1987</small></p>
+                    Started working for <strong>Capcom</strong> project
+                    <a
+                      href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                      >"Street Fighter Alpha 2"</a
+                    >. As a freelance on
+                    <a
+                      href="https://www.google.com/search?client=firefox-b-d&sxsrf=ALeKk00EwbkIKCtQ6xoo9IEYA87zwyExIg%3A1588460805182&ei=Bf2tXp3BCsmnrgTVprbQCQ&q=street+fighter&oq=street+&gs_lcp=CgZwc3ktYWIQAxgAMgQIABBDMgQIABBDMgIIADIECAAQQzICCAAyAggAMgIIADIFCAAQgwEyBAgAEEMyAggAOgQIABBHOgQIIxAnOgcIABCDARBDUKqrA1j2twNgsb4DaABwAngAgAFqiAH-BJIBAzYuMZgBAKABAaoBB2d3cy13aXo&sclient=psy-ab"
+                      >"Street Fighter"</a
+                    >. My partner was <strong>Ken Masters</strong>, the
+                    boss'name was <em>Sagat</em>.
+                  </li>
+                </ul>
               </div>
               <div class="six wide column">
-                <!-- Languages -->
-                <!-- Skills -->
-                <!-- Character -->
-                <!-- Likes -->
-                <!-- Dislikes -->
-                <!-- Wants -->
-                <!-- Education -->
-                <!-- Articles -->
+                <section>
+                  <h3>Languages</h3>
+                  <p class="tags small">
+                    <span>ENGLISH</span> / <span>MANDARIN</span> /
+                    <span>JAPANESE</span>
+                  </p>
+                </section>
+                <section>
+                  <h3>Skills</h3>
+                  <p class="tags small">
+                    KARATE ENERGY ATTACK &#8226; SHORYUKEN WALKING BAREFOOT
+                    PLAYING VIDEOGAMES &#8226; DOING BURGERS MASHING POTATOES
+                    &#8226; COPYWRITING ACTING VOICEOVERS
+                  </p>
+                </section>
+                <section>
+                  <h3>Character</h3>
+                  <p class="tags small">
+                    NOBLE DIRECT BOLD &#9830; CONFIDENT DARING SCHIZOPHRENIC
+                    &#9830; DRAMATIC PERSUASIVE IMMEDIATE WISE
+                  </p>
+                </section>
+                <section>
+                  <h3>Likes&#x1f603;</h3>
+                  <p class="tags small">
+                    &#10004; GI VEGETABLES BLOOD SMALL &#10004; MARSHMELLOWS RED
+                    COLOR KILLED ENEMY
+                  </p>
+                </section>
+                <section>
+                  <h3>Dislikes&#x1f61e;</h3>
+                  <p class="tags small">
+                    &#10008; BISONS GHOSTS &#10008; SMARTPHONES &#10008; SMELL
+                    OF SEAFOOD &#10008; BARBER SHOPS &#10008; SLEEVES
+                  </p>
+                </section>
+                <section>
+                  <h3>Wants&#x1f97a;</h3>
+                  <p class="tags small bulleted">
+                    &#9884; BE FIT &#9884; WRITE MORE BOOKS &#9884; FIND A
+                    GIRLFRIEND TO GO TO CINEMA WITH &#9884; KILL ALL OF AKUMA
+                    FAMILY
+                  </p>
+                </section>
               </div>
             </div>
           </div>
